# vkm

./: .gitignore  CMakeLists.txt  LICENSE
include/: geom.hpp  math.hpp  test.hpp
src/: geom.cpp  math.cpp
tests/: geom.cpp  math.cpp
